frame/support/test/tests/pallet_ui/step_009.stderr
error: Invalid pallet::module, expect struct definition
 --> $DIR/step_009.rs:7:2
  |
7 |     pub enum Foo {}
  |     ^^^
